--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@angular/common": "~13.1.0",
     "@angular/compiler": "~13.1.0",
     "@angular/core": "~13.1.0",
+    "@angular/fire": "^7.3.0",
     "@angular/forms": "~13.1.0",
     "@angular/material": "^13.3.4",
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "firebase": "9.7.0",
     "ngx-mat-select-search": "^4.1.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.4.0",
