--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "planishare-dev"
-  }
+    "default": "planishare-dev",
+    "prod": "planishare",
+    "dev": "planishare-dev"
+  },
+  "targets": {}
 }
