feat(planishare): add pwa config

--- a/angular.json
+++ b/angular.json
@@ -1,8 +1,7 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "cli": {
-    "analytics": "e7e66277-b82a-4c87-ad5c-27107b9b14af",
-    "defaultCollection": "@angular-eslint/schematics"
+    "analytics": "e7e66277-b82a-4c87-ad5c-27107b9b14af"
   },
   "version": 1,
   "newProjectRoot": "projects",
@@ -33,12 +32,14 @@
             "assets": [
               "src/favicon.ico",
               "src/assets",
-              "src/manifest.json"
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "serviceWorker": true,
+            "ngswConfigPath": "ngsw-config.json"
           },
           "configurations": {
             "production": {
@@ -101,7 +102,8 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/manifest.webmanifest"
             ],
             "styles": [
               "src/styles.scss"
@@ -120,6 +122,5 @@
         }
       }
     }
-  },
-  "defaultProject": "planishare"
+  }
 }
