--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@angular/service-worker": "^14.2.0",
+    "angular-tabler-icons": "^2.33.0",
     "ngx-doc-viewer": "^14.0.0",
     "ngx-mat-select-search": "^4.2.1",
     "rollbar": "^2.25.2",
